# negativeobstacleavoidandance

./: .gitignore  README.md
aws-robomaker-small-warehouse-world/launch/: no_roof_small_warehouse.launch.py
bot_camera/: CMakeLists.txt  package.xml
bot_camera/bot_camera/: =1.21.5  =1.24.1  Depth_Cam.py  Dtest.py  RGB_cam.py  cancel.py  clean_yolo.py  cnn_cam.py  dataset.py  depth_data.py  model.py  realsense_cam.py  requirement.sh  scan_merge.py  testting.py  yolo.py  yolo2.py  yolo_pg3.py
bot_camera/cnn_model/: first_model (1).ipynb
bot_nav2/: CMakeLists.txt  package.xml
bot_nav2/config/: nav.param.yaml  nav2_params.yaml
bot_nav2/launch/: localizatin.launch.py  my_nav.launch.py  nav.launch.py  nav2.launch.py  nav_map.launch.py
bot_nav2/rviz/: nav.rviz  nav2.rviz  nav3.rviz
bumperbot_bringup/: package.xml
bumperbot_bringup/launch/: simulated_robot.launch.py
bumperbot_controller/config/: joy_teleop.yaml  twist_mux_topics.yaml
bumperbot_description/: CMakeLists.txt  package.xml
bumperbot_description/launch/: gazebo.launch.py
bumperbot_description/urdf/: bumperbot.urdf.xacro  bumperbot_gazebo.xacro  realsense2.urdf.xacro
bumperbot_description/worlds/: eworld.world  eworld2.world  expandedworld.world  smallest_world.world
bumperbot_localization/: CMakeLists.txt  package.xml
bumperbot_localization/launch/: global_localization.launch.py  nav.launch.py
bumperbot_localization/params/: nav2_params.yaml
bumperbot_localization/rviz/: global_localization.rviz  slam.rviz
classic_ws/src/: .gitignore
detection/: package.xml  setup.py
(+26 files in other folders)
