<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bot_nav2</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="shonde@todo.todo">shonde</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>nav2_bringup</depend>
  <!-- <depend>bot_nav2</depend> -->

  <exec_depend>rviz2</exec_depend>
  <exec_depend>bumperbot_firmware</exec_depend>
  <exec_depend>bumperbot_controller</exec_depend>
  <exec_depend>bumperbot_description</exec_depend>
  <exec_depend>bumperbot_localization</exec_depend>
  <exec_depend>bumperbot_mapping</exec_depend>
  <!-- <exec_depend>bot_nav2</exec_depend>
  -->


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
